[package]
name = "stoik-gui"
version = "0.0.0"
edition = "2021"
authors = ["htmlcsjs"]

[dependencies]
stoik = { path = "../stoik" }
eframe = "0.21"
egui = "0.21"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
image = "0.24"
