[package]
name = "stoik-gui"
version = "0.0.0"
edition = "2021"
authors = ["htmlcsjs"]

[dependencies]
stoik = { path = "../stoik" }
eframe = "0.22"
egui = { version = "0.22", features = ["log"] }
strum = { version = "0.24", features = ["derive"] }
log = "0.4.18"
egui_extras = { version = "0.22.0", features = ["log"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[build-dependencies]
image = "0.24"
