[package]
name = "stoik-gui"
version = "0.1.0"
edition = "2024"
authors = ["htmlcsjs"]

[dependencies]
stoik = { path = "../stoik" }
eframe = { version = "0.31", default-features = false, features = [
  "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "wayland",       # To support Linux (and CI)
]}
egui = { version = "0.31", features = ["log"] }
strum = { version = "0.24", features = ["derive"] }
log = "0.4"
egui_extras = "0.31.1"
#egui_extras = { version = "0.31", features = ["log"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

#[build-dependencies]
#image = "0.24"


